required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- maptemplate.c: removed extra line feeds from mime header output. (#2672)

- mapresample.c: fix for bug 2540 when using raster resampling and AGG.

- mapsde.c: Check at compile time that we have SE_connection_test_server, 
  which appears to only be available for ArcSDE 9+ (#2665).
  
- mapshape.c: restore old behavior of tiled shapes relative to shapepath
  with new behavior for when shapepath is undefined (#2369)

- maputil.c: fix a bug for offset lines with agg, when the first segment 
  was horizontal (#2659)

- mapraster.c: fix for tiled rasters with relative shape paths defined, 
  from dfurhy (#2369)

- maptemplate.c: fixed a problem with extent tags with _esc extension not 
  working (#2666)

Version 5.2.0-beta3 (2008-06-26):
---------------------------------

- mapsde.c: processing option added to allow using fully qualified names
  for attributes (#2423).           

- mapsde.c: Test for an active connection before closing it (#2498).

- mapdraw.c: Fixed issue where path following labels were not being drawn if FORCEd. (#2600)

- mapshape.c: Applied patch to make the location of tiled data relative to the
  tileindex directory if SHAPEPATH is not set. (#2369)

- maptemplate.c: Fixed issues in RFC 36 implementation that prevented mapscript 
  mapObj->processQueryTemplate() method from working.

- WMS/WFS: extend warning message (#1396)

- WFS: Respect units for the DWhitin parameter (#2297)

- WFS: correct OGC Contains filter  (#2306)

- WMS: set srsName correctly for GetFeatureInfo (#2502)

- SOS: detect invalid time strings (#2560)

- SOS: more srsName support (#2558)
