@@ -12,6 +12,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Added more debug/tuning output to mapserv at debug level 2 (#2673)
+
 - maptemplate.c: removed extra line feeds from mime header output. (#2672)
 
 - mapresample.c: fix for bug 2540 when using raster resampling and AGG.
